# Acquire_FPGA

./: .gitignore  MicroBlaze_Application_Directories_GNU.txt
Vitis_Workspace/MicroBlaze_ADC/.rigel_lopper/: system-top.dts.pp
Vitis_Workspace/MicroBlaze_ADC/MB_ADC_App/: vitis-comp.json
Vitis_Workspace/MicroBlaze_ADC/MB_ADC_Platform/: vitis-comp.json
Vitis_Workspace/MicroBlaze_ADC/_ide/: .peers.ini  .vitisPlatformRepo.json  workspace_journal.py  workspace_journal_14348.py  workspace_journal_16888.py  workspace_journal_27144.py  workspace_journal_27516.py  workspace_journal_29500.py  workspace_journal_3220.py  (+4 more)
Vitis_Workspace/MicroBlaze_IO/: GPIO_IRQ_Support.c
Vitis_Workspace/_ide/: .peers.ini
Vivado_Workspace/Acquire_ADC/: Acquire_ADC.xpr  Block_Diagram_ADC_wrapper.bit  Block_Diagram_ADC_wrapper.mmi  Block_Diagram_ADC_wrapper.xsa
Vivado_Workspace/Acquire_DDR3/: Acquire_DDR3.xpr
Vivado_Workspace/Acquire_IO/: Acquire_IO.xpr
Vivado_Workspace/Acquire_LCD/: Acquire_LCD.xpr  Block_Diagram_LCD_wrapper.xsa  DDR3_Log.txt
Vivado_Workspace/Acquire_Timer/: Acquire_Timer.xpr
Vivado_Workspace/Acquire_UART/: Acquire_UART.xpr  Arty_A7_100T_DDR3.ucf  Block_Diagram_UART_wrapper.xsa  To_Fix.txt
Vivado_Workspace/Acquire_UART_Lite/: Acquire_UART_Lite.xpr
Vivado_Workspace/Acquire_uSD/: Acquire_uSD.xpr  Block_Diagram_uSD_wrapper.xsa
Vivado_Workspace/ip_repo/imr_adc_7476a_v1_0_1_0/drivers/IMR_ADC_7476A_V1_0_v1_0/src/: CMakeLists.txt  xIMR_ADC_7476A_V1_0.c  xIMR_ADC_7476A_V1_0.h  xIMR_ADC_7476A_V1_0_sinit.c
Vivado_Workspace/utilities/: create_driver.tcl
(+5991 files in other folders)
